syntax = "proto3";

option go_package = "/pb";

package pb;

message FileMetadata {
    string fileId = 1;
    string filename = 2;
    string path = 3;
    string ownerId = 4;
}

message CreateFileMetadataRequest {
    string ownerId = 1;
    string filename = 2;
    int64 size = 3;
    string path = 4;
}

message FindFileMetadataByIdRequest {
    string fileId = 1;
    string requesterUserId = 2;
}

service FileInfoService {
    rpc createFileMetadata(CreateFileMetadataRequest) returns (FileMetadata);
    rpc findFileMetadataById(FindFileMetadataByIdRequest) returns (FileMetadata);
}